--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,1 +1,6 @@
-@import "Layout/_header"
+@import "Layout/_header";
+@import "Layout/_footer";
+@import "Paginas/contacto";
+@import "Paginas/index";
+@import "Paginas/blog";
+@import "Paginas/columnistas";
