--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,4 +3,4 @@
 @import "Paginas/contacto";
 @import "Paginas/index";
 @import "Paginas/blog";
-@import "Paginas/columnistas";
+@import "Paginas/columna";
