--- a/assets/css/Paginas/blog.scss
+++ b/assets/css/Paginas/blog.scss
@@ -1,3 +1,6 @@
+h1, .flechas{
+    margin-left:2% !important;
+}
 .post-blog{
     padding-left: 10%;
     padding-right: 10%;
@@ -8,10 +11,13 @@
 .box{
     text-align: center;
     padding: 2%;
-    border:1px solid gray;
+    border:2px solid #C7C7C7;
     margin: 2%;
     .datos{
         padding: 15%;
+        a{
+            color: black;
+        }
     }
     .titulo{
         font-weight: bold;
@@ -24,13 +30,15 @@
         img{
             border:2px solid white;
         }
-        .desc2 p{
-            font-size: 18px;
-            margin-bottom:0; 
-        }
-        .text-gris{
+        .desc2 {
+            p{
+                font-size: 18px;
+                margin-bottom:0; 
+            }
+            .text-gris{
             color: gray;
             font-size: 20px;
+            }
         }
     }
 }
