--- a/assets/css/Paginas/columna.scss
+++ b/assets/css/Paginas/columna.scss
@@ -9,6 +9,11 @@
         } 
     } 
 
+    body{
+        color: black !important;
+    }
+
+
   .caja{
     @include box; 
     }
@@ -16,6 +21,8 @@
 
 h4{
     font-weight: bold !important;
+    font-family: 'Oswald', sans-serif !important;
+   
 }
 
 .gray{
@@ -50,3 +57,24 @@ margin-top: -2%;
  font-size: 10px;
  margin-top: 5%;
 }
+
+h5{
+font-family: 'Oswald', sans-serif !important;
+}
+
+.espacio{
+    margin-left: 3%;
+}
+
+.red{
+    background-color: red !important;
+}
+
+
+
+
+
+
+
+
+
