--- a/assets/css/Paginas/index.scss
+++ b/assets/css/Paginas/index.scss
@@ -51,7 +51,7 @@ h3{
 }
 	/*Slide*/
 
-
+/*
 .slider-nav div{ text-align: center; display: block}
  
 .slider-for div img,
@@ -71,7 +71,7 @@ h3{
 .slick-prev:before,
 .slick-next:before{
    color: #000!important;
-}
+}*/
 
 	/*Aside Index*/
 .textura{
@@ -80,12 +80,12 @@ h3{
 	width: 100%;
 	height: 100px;
 }
-
-/* ---------------- CONTACTO -----------------------*/
-input, textarea{
-	background-color: #E8E8E8 !important;
-}
-.black{
-	background-color: black;
-	color: white;
+/*SLIDE ELISA*/
+#myCarousel{
+	img{
+		width: 100%;
+	}
+	.carousel-indicators .active {
+		background-color: red;
+	}
 }
